[gd_scene load_steps=7 format=3 uid="uid://eipswnqlbhws"]

[ext_resource type="Texture2D" uid="uid://7fiidm8lv6la" path="res://Minesweeper-pack/Minesweeper-pack/single-files/minesweeper_01.png" id="1"]
[ext_resource type="Texture2D" uid="uid://dositgeayu7d4" path="res://Minesweeper-pack/Minesweeper-pack/single-files/minesweeper_05.png" id="2"]
[ext_resource type="PackedScene" uid="uid://bo1qi8yirbogj" path="res://Clue.tscn" id="3"]
[ext_resource type="Texture2D" uid="uid://c0g4rjmfkri2s" path="res://Minesweeper-pack/Minesweeper-pack/single-files/minesweeper_00.png" id="4"]
[ext_resource type="Script" path="res://Tiles.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://ep7ws7fwvkg8" path="res://Minesweeper-pack/Minesweeper-pack/single-files/minesweeper_02.png" id="6"]

[node name="Tiles" type="Node2D"]
script = ExtResource("5")

[node name="TileBack" type="Sprite2D" parent="."]
texture = ExtResource("1")
centered = false

[node name="Control" type="Control" parent="TileBack"]
show_behind_parent = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Clue" parent="." instance=ExtResource("3")]

[node name="TileBomb" type="Sprite2D" parent="."]
texture = ExtResource("2")
centered = false

[node name="TileCover" type="Sprite2D" parent="."]
texture = ExtResource("4")
centered = false

[node name="Flag" type="Sprite2D" parent="."]
visible = false
position = Vector2(16, 16)
texture = ExtResource("6")

[connection signal="gui_input" from="TileBack/Control" to="." method="_on_Control_gui_input"]
